terraform/patches/monitoring_virtualservice_grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /grafana/
        - uri:
            exact: /grafana
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: grafana
